--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "socket.io-client": "^4.7.2",
     "three": "^0.157.0",
     "web-vitals": "^2.1.4"
